minor changes. change in the initial swagger.yaml and MealIngredient.category -> MealIgredient->ingredient_type
