# swagger_server/swagger/swagger.yaml
@@ -1649,6 +1649,12 @@ components:
     Element:
       type: object
       properties:
+        type:
+          type: string
+          enum:
+          - period
+          - event
+          - day_descriptor
         uuid:
           type: string
           format: uuid
@@ -1669,15 +1675,16 @@ components:
       - $ref: '#/components/schemas/Element'
       - required:
         - period_range
+        - period_type
         type: object
         properties:
-          period_range:
+          range:
             type: string
             example: '[2010-01-01 14:30, 2010-01-01 15:30]'
           period_type:
             type: string
             readOnly: true
-          period_description:
+          description:
             type: string
             example: nothing noticeable
             default: ""
@@ -1695,10 +1702,11 @@ components:
       allOf:
       - $ref: '#/components/schemas/Element'
       - required:
-        - event_timestamp
+        - event_type
+        - timestamp
         type: object
         properties:
-          event_timestamp:
+          timestamp:
             type: string
             format: date-time
           event_type:
@@ -1717,10 +1725,11 @@ components:
       allOf:
       - $ref: '#/components/schemas/Element'
       - required:
-        - day_descriptor_date
+        - date
+        - day_descriptor_type
         type: object
         properties:
-          day_descriptor_date:
+          date:
             type: string
             format: date
           day_descriptor_type:
@@ -1735,18 +1744,18 @@ components:
       - quantity
       properties:
         added_fat:
-          minimum: 0.0
+          minimum: 0
           type: number
           format: float
-          default: 0.0
+          default: 0
         carbohydrates:
-          minimum: 0.0
+          minimum: 0
           type: number
           description: quantity in [g] for 100g or 100mL
           format: float
-          default: 0.0
+          default: 0
         quantity:
-          minimum: 0.0
+          minimum: 0
           type: number
           description: quantity in [g] or [mL]
           format: float
@@ -1756,11 +1765,11 @@ components:
       allOf:
       - $ref: '#/components/schemas/Event'
       - required:
-        - weigh_heaviness
+        - heaviness
         type: object
         properties:
-          weigh_heaviness:
-            minimum: 0.0
+          heaviness:
+            minimum: 0
             type: number
             description: quantity in [g]
             format: float
@@ -1770,14 +1779,14 @@ components:
       allOf:
       - $ref: '#/components/schemas/Event'
       - required:
-        - pill_name
+        - name
         - pill_type
         type: object
         properties:
           pill_type:
             type: string
             example: vitamines
-          pill_name:
+          name:
             type: string
             example: supradyn
     Drink:
@@ -1786,10 +1795,10 @@ components:
       - $ref: '#/components/schemas/Event'
       - $ref: '#/components/schemas/Consumable'
       - required:
-        - drink_category
+        - drink_type
         type: object
         properties:
-          drink_category:
+          drink_type:
             type: string
             enum:
             - coffee
@@ -1837,20 +1846,20 @@ components:
       allOf:
       - $ref: '#/components/schemas/DayDescriptor'
       - required:
-        - mood_anxiousness
-        - mood_depress
-        - mood_description
+        - anxiousness
+        - depress
+        - description
         type: object
         properties:
-          mood_description:
+          description:
             type: string
             example: tout va bien aujourd'hui
-          mood_anxiousness:
+          anxiousness:
             maximum: 10
             minimum: 0
             type: integer
             format: int32
-          mood_depress:
+          depress:
             maximum: 10
             minimum: 0
             type: integer
@@ -1860,12 +1869,12 @@ components:
       allOf:
       - $ref: '#/components/schemas/Event'
       - required:
-        - blood_test_level
         - blood_test_type
+        - level
         type: object
         properties:
-          blood_test_level:
-            minimum: 0.0
+          level:
+            minimum: 0
             type: number
             description: 'ketonemia: quantity in [mmol/L], blood_sugar: quantity in
               [mg/dL]'
@@ -1877,20 +1886,28 @@ components:
             - ketonemia
             - blood_sugar
     Meal:
-      description: single ingredient meal or composite meal
+      description: meal of the day
       allOf:
       - $ref: '#/components/schemas/Event'
       - $ref: '#/components/schemas/Consumable'
       - required:
-        - meal_category
-        - meal_description
-        - meal_parent
+        - ingredients
         type: object
         properties:
-          meal_parent:
-            type: string
-            format: uuid
-          meal_category:
+          ingredients:
+            type: array
+            items:
+              $ref: '#/components/schemas/MealIngredient'
+    MealIngredient:
+      description: compose a meal. can be composite or single ingredient
+      allOf:
+      - $ref: '#/components/schemas/Consumable'
+      - required:
+        - ingredient_type
+        - name
+        type: object
+        properties:
+          ingredient_type:
             type: string
             example: vegetable
             enum:
@@ -1900,7 +1917,7 @@ components:
             - meat
             - sauce
             - cereal
-          meal_name:
+          name:
             type: string
             example: tomate
     Span:
